@@ -30,24 +30,24 @@ CONFIG_CMD_SETENV=y
 #CONFIG_CMD_VERIFY=y
 #CONFIG_CMD_WAIT=y
 #CONFIG_CMD_XRECEIVE=y
-CONFIG_CMD_EMAC=y
+#CONFIG_CMD_EMAC=y
 
 CONFIG_ATAG=y
 CONFIG_ATAG_PHYS=0x20000100
 CONFIG_ARCH_NUMBER=609
 
 #CONFIG_DRIVER_NAND=y
-#CONFIG_DRIVER_NOR=y
+CONFIG_DRIVER_NOR=y
 #CONFIG_RELOCATE_NAND=y
-CONFIG_DRIVER_CPLD_SPI=y
-CONFIG_DRIVER_EMAC=y
+#CONFIG_DRIVER_CPLD_SPI=y
+#CONFIG_DRIVER_EMAC=y
 
 CONFIG_NAND_LPD=y
 
 #CONFIG_ENV_AUTOBOOT=50
 
 #CONFIG_ENV_REGION_KERNEL=nor:256k#1536k
-#CONFIG_ENV_REGION=nor:128k#64k
+CONFIG_ENV_REGION=nor:128k#64k
 
 #CONFIG_ENV_REGION_KERNEL=nand:32k#2016k
 #CONFIG_ENV_REGION=nand:24k#8k
